--- a/style.css
+++ b/style.css
@@ -75,6 +75,10 @@ h6{
     margin: 0 auto;
 }
 
+.navbar-brand .logo {
+    font-family: fantasy;
+}
+
 .main-navbar li.active {
     background-color: var(--primary-color);
 }
